--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Thomas Soares <thomas__soares@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.32"
   }
 }
