--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/thomas-soares/projeto-nlw.git",
   "author": "Thomas Soares <thomas__soares@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
