--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.0"
   }
 }
